BakingTray ChangeLog

Most commits and development should go in the dev branch (or a branch devoted to a specific feature).
When mature, changes should be merged into master *as a merge commit*  and this changelog file updated. 


4th July 2017
- Major organisation of project prior to publishing on GitHib.
- Multiple small bug fixes.
- Code tidying. 
- Data no longer written into current directory.
- Raw data go into rawData directory as mandated by StitchIt.
- acquisition view reports when cutting is taking place